--- a/css/main.css
+++ b/css/main.css
@@ -1,34 +1,61 @@
 .text--inherit {
   font-size: inherit;
   line-height: inherit;
-  letter-spacing: inherit; }
+  letter-spacing: inherit;
+}
 
 .text--page-heading {
-  font-size: 28;
-  line-height: 36;
-  letter-spacing: 0.1; }
+  font-size: 1.75rem;
+  line-height: 2.25rem;
+  letter-spacing: 0.00625rem;
+}
+@media (min-width: 39.375rem) {
+  .text--page-heading {
+    font-size: 2.25rem;
+    line-height: 2.75rem;
+  }
+}
+@media (min-width: 73.75rem) {
+  .text--page-heading {
+    font-size: 2.625rem;
+    line-height: 3.125rem;
+  }
+}
 
 .text--section-heading {
-  font-size: 24;
-  line-height: 32;
-  letter-spacing: 0.15; }
+  font-size: 1.5rem;
+  line-height: 2rem;
+  letter-spacing: 0.00937rem;
+}
+@media (min-width: 39.375rem) {
+  .text--section-heading {
+    font-size: 1.75rem;
+    line-height: 2.5rem;
+    letter-spacing: 0.0125rem;
+  }
+}
 
 .text--list-heading {
-  font-size: 24;
-  line-height: 35; }
+  font-size: 1.5rem;
+  line-height: 2.1875rem;
+}
 
 .text--item-heading {
-  font-size: 18;
-  line-height: 24; }
+  font-size: 1.125rem;
+  line-height: 1.5rem;
+}
 
 .text--category-heading {
-  font-size: 12;
-  line-height: 18; }
+  font-size: 0.75rem;
+  line-height: 1.125rem;
+}
 
 .text--body {
-  font-size: 18;
-  line-height: 26; }
+  font-size: 1.125rem;
+  line-height: 1.625rem;
+}
 
 .text--small {
-  font-size: 15;
-  line-height: 20; }
+  font-size: 0.9375rem;
+  line-height: 1.25rem;
+}
