updated comments for sassdocs

--- a/src/lib/_index.scss
+++ b/src/lib/_index.scss
@@ -1,8 +1,8 @@
 // lib
 
 // functions
-@import 'functions/px';
-@import 'functions/typography';
+@import "functions/px";
+@import "functions/typography";
 
 // mixins
-@import 'mixins/typography/index';
+@import "mixins/typography/index";
