--- a/src/vars/_layout.scss
+++ b/src/vars/_layout.scss
@@ -1,23 +1,30 @@
-$spacing-default: 'base' !default;
+/// Default spacing size name
+/// @group layout
+$spacing-default: "base" !default;
+
+/// Map of spacing sizes
+/// @group layout
 $spacings-map: (
-  'none': 0,
-  'tiny': 2,
-  'tight': 4,
-  'half': 8,
-  'base': 16,
-  'large': 24,
-  'double': 32,
-  'xl': 40,
-  'triple': 48,
-  'giant': 64,
-  'biggest': 80,
+  "none": 0,
+  "tiny": 2,
+  "tight": 4,
+  "half": 8,
+  "base": 16,
+  "large": 24,
+  "double": 32,
+  "xl": 40,
+  "triple": 48,
+  "giant": 64,
+  "biggest": 80,
 ) !default;
 
+/// Map of breakpoint sizes
+/// @group layout
 $breakpoints-map: (
-  'small': 360,
-  'medium': 630,
-  'base': 950,
-  'large': 1180,
-  'xl': 1400,
-  'giant': 1600,
+  "small": 360,
+  "medium": 630,
+  "base": 950,
+  "large": 1180,
+  "xl": 1400,
+  "giant": 1600,
 ) !default;
