--- a/src/vars/_index.scss
+++ b/src/vars/_index.scss
@@ -1,4 +1,5 @@
-@import 'colors';
-@import 'layout';
-@import 'typography';
-@import 'z-indexes';
+@import "config";
+@import "colors";
+@import "layout";
+@import "typography";
+@import "z-indexes";
