--- a/src/vars/utils/_json.scss
+++ b/src/vars/utils/_json.scss
@@ -1,5 +1,6 @@
 /// Helper to turn Sass map into JSON,
 /// to be exported for javascript
+/// @group utils
 /// @example scss
 ///     $colors-map: (
 ///       "red": #f00,
