--- a/src/lib/mixins/typography/_index.scss
+++ b/src/lib/mixins/typography/_index.scss
@@ -1,3 +1,3 @@
-@import 'dimensions';
-@import 'output';
-@import 'modifiers';
+@import "./dimensions";
+@import "./output";
+@import "./modifiers";
