--- a/src/lib/mixins/typography/_modifiers.scss
+++ b/src/lib/mixins/typography/_modifiers.scss
@@ -1,14 +1,14 @@
 @import "../../functions/typography";
 @import "./dimensions";
+@import "../utils/concat";
 
-/// Apply all typography dimensions to a selector,
-/// as BEM modifiers, and add all related styles to an element.
-///
-/// **NOTE:** Must be nested within a selector
+/// Apply all typography dimensions to a selector as modifiers,
+/// and add all related styles to an element.
 /// @group typography
 /// @require {list} $typography-dimensions-names
 /// @require {mixin} typography-dimensions
-/// @output BEM &--modifiers wrapped around styles
+/// @require {bool} $modifier-is-appended
+/// @require {string} $modifier-delimiter
 /// @example scss - include specific names
 ///     @include typography-modifiers("page-heading", "section-heading");
 ///     // &--page-heading { /* typography dimensions */ }
@@ -19,9 +19,16 @@
 ///     // &--section-heading { /* typography dimensions */ }
 ///     // ... /* all the other modifiers too */
 /// @param {list} $list [$typography-dimensions-names] - list of typography dimension names
-@mixin typography-modifiers($list: $typography-dimensions-names) {
+/// @param {bool} $is-appended - if the selector is appended (or nested)
+/// @param {string} $delimiter - delimiter for class/modifier name
+/// @output modifiers/class names wrapped around styles
+@mixin typography-modifiers(
+  $list: $typography-dimensions-names,
+  $is-appended: $modifier-is-appended,
+  $delimiter: $modifier-delimiter
+) {
   @each $name in $list {
-    &--#{$name} {
+    @include concat($is-appended, $delimiter, $name) {
       @include typography-dimensions($name);
     }
   }
