--- a/src/reset.scss
+++ b/src/reset.scss
@@ -132,6 +132,14 @@ table {
   border-spacing: 0;
 }
 
+// font rendering & legibility
+body {
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-kerning: auto;
+}
+
 // Box Sizing
 html {
   -webkit-box-sizing: border-box;
@@ -152,14 +160,19 @@ button,
 input[type="button"],
 input[type="reset"],
 input[type="submit"] {
+  appearance: none;
+  border: 0;
+  background: transparent;
+  font-weight: font-weight(inherit);
+  font-family: font-family(inherit);
+  font-size: font-size(inherit);
+
   &:hover {
     cursor: pointer;
   }
 }
 
-$focus-outline-color: color(blue) !default;
-$focus-outline-offset: px(tight);
-
 *:focus {
-  outline: px(1) dashed $focus-outline-color;
+  outline: px(1) dashed #333;
+  outline-offset: px(2);
 }
