--- a/src/reset.scss
+++ b/src/reset.scss
@@ -166,13 +166,15 @@ input[type="submit"] {
   font-weight: font-weight(inherit);
   font-family: font-family(inherit);
   font-size: font-size(inherit);
+  padding: 0;
+  margin: 0;
 
-  &:hover {
+  &:not(:disabled):hover {
     cursor: pointer;
   }
 }
 
 *:focus {
-  outline: px(1) dashed #333;
+  outline: px(1) dashed rgba(51, 51, 51, 0.5);
   outline-offset: px(2);
 }
