--- a/src/reset.scss
+++ b/src/reset.scss
@@ -157,17 +157,16 @@ html {
 
 // Buttons & Focus
 button,
-input[type="button"],
-input[type="reset"],
-input[type="submit"] {
+input {
   appearance: none;
+  font-family: font-family("inherit");
+  font-size: font-size("inherit");
+  font-weight: font-weight("inherit");
   border: 0;
   background: transparent;
-  font-weight: font-weight(inherit);
-  font-family: font-family(inherit);
-  font-size: font-size(inherit);
   padding: 0;
   margin: 0;
+  color: color("inherit");
 
   &:not(:disabled):hover {
     cursor: pointer;
@@ -176,5 +175,5 @@ input[type="submit"] {
 
 *:focus {
   outline: px(1) dashed rgba(51, 51, 51, 0.5);
-  outline-offset: px(2);
+  outline-offset: px(4);
 }
